fixed missaligned repeat bars of the right and bottom.  There may possibly be some bad angles that aren't visible with the current test 9patch.  Will need to try different ones to see how it works.

--- a/public_html/css/index.css
+++ b/public_html/css/index.css
@@ -16,7 +16,7 @@ body {
  */
 #center_content {
 	width: 800px;
-	height: 499px;
+	height: 500px;
 	margin: 0 auto;
 	padding: 20px;
 	background: url(/img/test.9.png);
